Add ToggleGroup UI and Numeric Value UI

--- a/src/components/Toggles/Toggle.module.scss
+++ b/src/components/Toggles/Toggle.module.scss
@@ -9,3 +9,10 @@
 .toggleLabel {
   margin: 4px;
 }
+
+.toggleControls {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
