--- a/src/components/Container/FormResult.module.scss
+++ b/src/components/Container/FormResult.module.scss
@@ -1,7 +1,6 @@
 .formResultContainer {
-  background-color: #ffffff;
+  //   background-color: #ffffff;
   min-height: 300px;
-  color: #333333;
   border-radius: 8px;
   h2 {
     margin: 10px;
