--- a/src/components/Container/FormResult.module.scss
+++ b/src/components/Container/FormResult.module.scss
@@ -1,15 +1,17 @@
 .formResultContainer {
-  //   background-color: #ffffff;
+  background-color: #ccc;
   min-height: 300px;
   border-radius: 8px;
+  padding: 8px;
   h2 {
     margin: 10px;
+    color: black;
   }
 }
 
 .formResultContent {
+  border-radius: 8px;
   padding: 8px;
-  margin: 8px;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
 }
